--- a/HookMemory/Movie/View/MovieHistoryView.xib
+++ b/HookMemory/Movie/View/MovieHistoryView.xib
@@ -10,25 +10,29 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MovieHistoryView" customModule="Haxen" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="700" height="721"/>
+            <rect key="frame" x="0.0" y="0.0" width="451" height="638"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUX-0G-Ard">
-                    <rect key="frame" x="16" y="16" width="55" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="History record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xUX-0G-Ard">
+                    <rect key="frame" x="16" y="29" width="131.33333333333334" height="24"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONs-Sm-Mce">
-                    <rect key="frame" x="609" y="16" width="75" height="35"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONs-Sm-Mce">
+                    <rect key="frame" x="401" y="21" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="TAr-n4-GNM"/>
+                        <constraint firstAttribute="width" constant="40" id="UIC-ue-xQZ"/>
+                    </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" image="movie_history_delete"/>
                     <connections>
                         <action selector="ClickDeleteAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="q5T-de-csK"/>
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kjN-Ym-feI">
-                    <rect key="frame" x="16" y="53" width="668" height="668"/>
+                    <rect key="frame" x="16" y="69" width="419" height="569"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Od0-lF-OqY">
                         <size key="itemSize" width="128" height="128"/>
@@ -47,9 +51,9 @@
                 <constraint firstItem="kjN-Ym-feI" firstAttribute="top" secondItem="xUX-0G-Ard" secondAttribute="bottom" constant="16" id="0OX-PT-n5C"/>
                 <constraint firstItem="xUX-0G-Ard" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="77o-cO-mJc"/>
                 <constraint firstAttribute="bottom" secondItem="kjN-Ym-feI" secondAttribute="bottom" id="KHX-kL-zsU"/>
-                <constraint firstAttribute="trailing" secondItem="ONs-Sm-Mce" secondAttribute="trailing" constant="16" id="MYQ-VR-Sro"/>
-                <constraint firstItem="xUX-0G-Ard" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="N9l-WM-ekq"/>
-                <constraint firstItem="ONs-Sm-Mce" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="bFF-ml-72J"/>
+                <constraint firstAttribute="trailing" secondItem="ONs-Sm-Mce" secondAttribute="trailing" constant="10" id="MYQ-VR-Sro"/>
+                <constraint firstItem="xUX-0G-Ard" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="29" id="N9l-WM-ekq"/>
+                <constraint firstItem="ONs-Sm-Mce" firstAttribute="centerY" secondItem="xUX-0G-Ard" secondAttribute="centerY" id="X4I-Gf-SYD"/>
                 <constraint firstItem="kjN-Ym-feI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="duC-Zp-R01"/>
                 <constraint firstAttribute="trailing" secondItem="kjN-Ym-feI" secondAttribute="trailing" constant="16" id="qvq-fT-Y4F"/>
             </constraints>
@@ -57,7 +61,10 @@
             <connections>
                 <outlet property="collectionView" destination="kjN-Ym-feI" id="gt5-mc-pyd"/>
             </connections>
-            <point key="canvasLocation" x="345.03816793893128" y="-26.408450704225352"/>
+            <point key="canvasLocation" x="154.96183206106869" y="-55.633802816901408"/>
         </view>
     </objects>
+    <resources>
+        <image name="movie_history_delete" width="20" height="20"/>
+    </resources>
 </document>
