--- a/HookMemory/Base/HookNavigationBar.xib
+++ b/HookMemory/Base/HookNavigationBar.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HookNavigationBar" customModule="HookMemory" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HookNavigationBar" customModule="Haxen" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -41,6 +41,19 @@
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ic0-QU-R9j">
                     <rect key="frame" x="349" y="0.0" width="44" height="44"/>
                     <subviews>
+                        <button hidden="YES" opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jb5-OY-uxY">
+                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="44" id="6S6-cf-Zs4"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.16862745100000001" green="0.1843137255" blue="0.21176470589999999" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="BtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="zlI-oK-QyK"/>
+                            </connections>
+                        </button>
                         <button hidden="YES" opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YEg-Xj-Ya9">
                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                             <constraints>
@@ -98,6 +111,7 @@
                 <outlet property="navLeft" destination="kUS-dX-C5d" id="FgU-H2-8pg"/>
                 <outlet property="rightBtn" destination="CTg-zZ-mdB" id="Kt5-ke-9ci"/>
                 <outlet property="titleL" destination="AYr-LD-VdQ" id="XPg-Fb-WgL"/>
+                <outlet property="vipBtn" destination="Jb5-OY-uxY" id="SUg-tM-Qcb"/>
             </connections>
             <point key="canvasLocation" x="121" y="20"/>
         </view>
