--- a/HookMemory/Movie/View/MovieSelectCell.xib
+++ b/HookMemory/Movie/View/MovieSelectCell.xib
@@ -21,6 +21,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="134" height="151"/>
                         <color key="backgroundColor" red="0.078431372549019607" green="0.078431372549019607" blue="0.078431372549019607" alpha="0.75" colorSpace="calibratedRGB"/>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play_mask" translatesAutoresizingMaskIntoConstraints="NO" id="Edt-Go-o3a">
+                        <rect key="frame" x="0.0" y="0.0" width="134" height="151"/>
+                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie_list_play" translatesAutoresizingMaskIntoConstraints="NO" id="Fzj-af-kBt">
                         <rect key="frame" x="49" y="57.666666666666657" width="36" height="36"/>
                         <constraints>
@@ -88,6 +91,13 @@
                             <action selector="clickSelectAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="GRW-fB-WQc"/>
                         </connections>
                     </button>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6c-CT-DnI">
+                        <rect key="frame" x="129" y="139" width="0.0" height="0.0"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -97,21 +107,28 @@
                 <constraint firstItem="bWb-c7-epV" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="2SV-Ez-QAL"/>
                 <constraint firstAttribute="trailing" secondItem="VIJ-1h-tXg" secondAttribute="trailing" id="4vY-Nd-xif"/>
                 <constraint firstItem="jgA-kP-niF" firstAttribute="trailing" secondItem="VIJ-1h-tXg" secondAttribute="trailing" constant="-4" id="4y0-F1-oyq"/>
+                <constraint firstItem="Edt-Go-o3a" firstAttribute="leading" secondItem="VIJ-1h-tXg" secondAttribute="leading" id="5JR-UK-0kW"/>
+                <constraint firstItem="Edt-Go-o3a" firstAttribute="top" secondItem="VIJ-1h-tXg" secondAttribute="top" id="65y-M6-cgK"/>
                 <constraint firstItem="jgA-kP-niF" firstAttribute="bottom" secondItem="VIJ-1h-tXg" secondAttribute="bottom" constant="-4" id="C5v-jJ-1RN"/>
                 <constraint firstItem="VIJ-1h-tXg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="FK5-Ew-11u"/>
+                <constraint firstItem="Edt-Go-o3a" firstAttribute="bottom" secondItem="VIJ-1h-tXg" secondAttribute="bottom" id="IAj-LY-7kh"/>
                 <constraint firstItem="Fzj-af-kBt" firstAttribute="centerY" secondItem="VIJ-1h-tXg" secondAttribute="centerY" id="JC6-h3-0C9"/>
                 <constraint firstItem="VIJ-1h-tXg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JuW-8Z-hJ1"/>
+                <constraint firstItem="Edt-Go-o3a" firstAttribute="trailing" secondItem="VIJ-1h-tXg" secondAttribute="trailing" id="RFA-Qs-PBO"/>
                 <constraint firstItem="CWQ-LI-INB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="Sc0-6t-3po"/>
                 <constraint firstItem="bWb-c7-epV" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="UfD-Ce-Tec"/>
                 <constraint firstItem="Fzj-af-kBt" firstAttribute="centerX" secondItem="VIJ-1h-tXg" secondAttribute="centerX" id="Zaw-Vq-uCy"/>
                 <constraint firstItem="OUm-QT-rpB" firstAttribute="top" secondItem="VIJ-1h-tXg" secondAttribute="bottom" constant="4" id="hwY-D2-8G4"/>
                 <constraint firstItem="OUm-QT-rpB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mXC-oy-cUS"/>
+                <constraint firstItem="jgA-kP-niF" firstAttribute="top" secondItem="v6c-CT-DnI" secondAttribute="bottom" constant="4" id="mo6-un-hJ5"/>
                 <constraint firstItem="jgA-kP-niF" firstAttribute="leading" secondItem="VIJ-1h-tXg" secondAttribute="leading" constant="4" id="mqw-PW-SpC"/>
+                <constraint firstAttribute="trailing" secondItem="v6c-CT-DnI" secondAttribute="trailing" constant="5" id="rt8-9B-Bwg"/>
                 <constraint firstAttribute="trailing" secondItem="OUm-QT-rpB" secondAttribute="trailing" id="vHE-XN-NrU"/>
             </constraints>
             <size key="customSize" width="134" height="195"/>
             <connections>
                 <outlet property="contentL" destination="DGe-bt-tRn" id="RVT-ee-ham"/>
+                <outlet property="epsL" destination="v6c-CT-DnI" id="C4V-Oj-es9"/>
                 <outlet property="imageV" destination="VIJ-1h-tXg" id="mTi-yg-So6"/>
                 <outlet property="progressV" destination="jgA-kP-niF" id="C5A-Nm-jXo"/>
                 <outlet property="scoreL" destination="CWQ-LI-INB" id="mHg-Tc-rXw"/>
@@ -125,5 +142,6 @@
         <image name="movie_histroy_unSelect" width="14" height="14"/>
         <image name="movie_list_play" width="36" height="36"/>
         <image name="movie_select" width="16" height="16"/>
+        <image name="play_mask" width="104" height="138"/>
     </resources>
 </document>
